--- a/starweb/app/views/supplies/_form.html.erb
+++ b/starweb/app/views/supplies/_form.html.erb
@@ -11,27 +11,38 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label 'Nombre' %>
-    <%= form.text_field :name %>
+  <div class="form-row">
+    <div class="form-group col-md-5">
+      <label for="inputEmail4"><b>Nombre</b></label>
+          <%= form.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group col-md-5">
+      <label for="inputAddress"><b>Stock</b></label>
+          <%= form.text_field :stock, class: 'form-control' %>
+    </div>
+  </div>
+  
+  <hr>
+
+  <div class="form-row">
+    <div class="form-group col-md-12">
+      <label for="exampleFormControlFile1"><b>Imagen</b></label>
+      <div class="custom-file">
+        <%= form.file_field :image, class: 'custom-file-input' %>
+        <label class="custom-file-label" for="customFile">Choose file</label>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label 'Imagen' %>
-    <%= form.file_field :image, class: 'field' %>
-  </div><br>
-
-  <div class="field">
-    <%= form.label 'Stock' %>
-    <%= form.text_field :stock %>
+  <div class="form-row">
+    <div class="form-group col-md-12">
+      <label for="inputPassword4"><br><b>Descripción</b></label>
+      <%= form.text_area :description, class: 'form-control' %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label 'Descripción' %>
-    <%= form.text_field :description %>
-  </div>
-
+  <hr>
   <div class="actions">
-    <%= form.submit class: 'btn btn-primary' %>
+    <%= form.submit "Guardar", class: 'btn btn-primary' %>
   </div>
 <% end %>
