--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -13,13 +13,14 @@
 <% end %>
 <!-- Content -->
 <div class="row">
-  <div class="col-md-4">
-    <% if @supplies.empty? %>
+  <% if @supplies.empty? %>
+    <div class="col-md-4">
       <p class="alert alert-warning">No ha agregado ningún insumo</p>
-    <% else %>
-      <% @supplies.each do |supply| %>
+    </div>
+  <% else %>
+    <% @supplies.each do |supply| %>
+      <div class="col-md-4">
         <div class="card col-md-12">
-
           <%= image_tag supply.image.url(:thumb), class: 'media-object' %>
           <div class="card-body">
             <h5 class="card-title"><%= supply.name %></h5>
