--- a/starweb/app/views/orders/_form_order_detail.html.erb
+++ b/starweb/app/views/orders/_form_order_detail.html.erb
@@ -17,7 +17,7 @@
 
   <div class="field">
     <%= form.label 'Nombre' %>
-    <%= form.text_field :name, class: 'form-control' %>
+    <%= form.text_field :name, :autofocus => true, class: 'form-control' %>
   </div>
 
   <div class="field">
@@ -31,6 +31,6 @@
   </div>
   <hr>
   <div class="actions">
-    <%= form.submit class: 'btn btn-primary' %>
+    <%= form.submit "Guardar", class: 'btn btn-primary' %>
   </div>
 <% end %>
