--- a/starweb/app/views/sponsors/index.html.erb
+++ b/starweb/app/views/sponsors/index.html.erb
@@ -14,19 +14,26 @@
 
 <!-- Content -->
   <div class="row">
-    <% @sponsors.each do |sponsor| %>
-    <div class="col-md-4 col-sm-5">
-      <div class="card col-md-12 p-2">
-        <div class="card-image">
-          <%= image_tag sponsor.image.url(:thumb) %>
+      <% if @sponsors.empty? %>
+        <div class="col-md-4 col-sm-5">
+          <p class="alert alert-warning">No ha agregado ningún auspiciante</p>
         </div>
-        <div class="card-content">
-          <hr>
-          <h4 class="card-title"><%= sponsor.name %></h4>
-          <hr>
-          <%= link_to '', edit_sponsor_path(sponsor), class: 'fas fa-edit' %> | <%= link_to '', sponsor, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %>
+      <% else %>
+      <% @sponsors.each do |sponsor| %>
+        <div class="col-md-4 col-sm-5">
+          <div class="card col-md-12 p-2">
+            <div class="card-image">
+              <%= image_tag sponsor.image.url(:thumb) %>
+            </div>
+            <div class="card-content">
+              <hr>
+              <h4 class="card-title"><%= sponsor.name %></h4>
+              <hr>
+              <%= link_to '', edit_sponsor_path(sponsor), class: 'fas fa-edit' %> | <%= link_to '', sponsor, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %>
+            </div>
+          </div>
         </div>
-      </div>
+      <%end%>
+    <%end%>
   </div>
-  <% end %>
 </div>
