--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -18,17 +18,18 @@
   <%end%>
   <div class="row mt-4">
     <div class="col-md-6">
+      <h4>Principal</h4>
+      <hr>
       <div class="row">
         <div class="col-md-6 col-sm-12">
-          <h4>Pedido</h4>
-          <hr>
-          <div class="card col-md-12">
+          <div class="card text-center border-primary col-md-12">
             <div class="card-body">
+              <h5 class="card-title mt-3"><b>Pedido</b></h5>
+              <hr>
               <p class="card-text">
                 <b>Fecha de entrega</b><br><%= @order.deliver_date %>
               </p>
               <p>
-                <b>Estado</b>
                 <% if @order.state == 'En espera' %>
                   <p class='alert alert-danger'><%= @order.state %></p>
                 <% elsif @order.state == 'En proceso' %>
@@ -44,10 +45,10 @@
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
-          <h4>Cliente</h4>
-          <hr>
-          <div class="card col-md-12">
+          <div class="card text-center border-primary col-md-12">
             <div class="card-body">
+              <h5 class="card-title mt-3"><b>Cliente</b></h5>
+              <hr>
               <p class="card-text">
                 <b>Nombre y Apellido</b><br><%= @order.client.firstname %>
                 <%= @order.client.lastname %> 
@@ -56,11 +57,11 @@
                 <b>Documento - RUC</b><br>
                 <%= @order.client.doc_ruc %>
               </p>
-              <p class="card-text"s>
+              <p class="card-text">
                 <b>Curso / Club</b> <br><%= @order.course_club %>
               </p>
-              <p class="card-text"s>
-                <b>Logo:</b> <br><%= image_tag @order.logo.url(:thumb) %>
+              <p class="card-text">
+                <hr><b>Logo</b> <br><hr><%= image_tag @order.logo.url(:thumb), class: 'card-img'   %>
               </p>
             </div>
           </div>
@@ -87,8 +88,10 @@
                   <tr>
                     <td><%= order_detail.name %></td>
                     <td><%= order_detail.number %></td>
-                    <td><%= order_detail.size %><br> 
-                    <td style="width: 20px;"><%= link_to '' , order_detail, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                    <td><%= order_detail.size %><br>
+                    <% if current_user.is_secretary? %>
+                      <td style="width: 20px;"><%= link_to '' , order_detail, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                    <%end%>
                     </tr>
                     <% end %>
                   </tbody>
@@ -107,14 +110,15 @@
       <% if @order.has_products.empty? %>
       <p>No ha agregado ningún producto</p>
       <% else %>
-      <div class="card col-md-12">
+      <div class="card border-primary col-md-12">
         <div class="row no-gutters">
-          <div class="col-md-4">
+          <div class="col-md-4 mt-4">
             <%= image_tag hasProduct.product.image.url(:thumb), class: 'card-img' %>
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title"><b><%= hasProduct.product.name %></b>   </h5>
+              <h4 class="card-title mt-2"><b><%= hasProduct.product.name %></b></h4>
+              <hr>
               <p class="card-text">
                 <p><b>Frontal</b> <br><%= hasProduct.specs_f %></p>
                 <p><b>Dorso</b> <br><%= hasProduct.specs_b %></p>
