--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -14,10 +14,10 @@
 <!-- Content -->
 <div class="row">
     <% @products.each do |product| %>
-      <div class="col-md-3 col-sm-5">
-        <div class="card col-md-12">
+      <div class="col-md-4 col-sm-5">
+        <div class="card text-center col-md-12">
           <div class="card-image">
-            <%= image_tag product.image.url(:thumb)%>
+            <%= image_tag product.image.url(:mini) %>
           </div>
           <div class="card-content">
             <hr>
