--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -20,16 +20,17 @@
   <% else %>
     <% @supplies.each do |supply| %>
       <div class="col-md-4">
-        <div class="card col-md-12">
-          <%= image_tag supply.image.url(:thumb), class: 'media-object' %>
+        <div class="card text-center col-12">
           <div class="card-body">
-            <h5 class="card-title"><%= supply.name %></h5>
+            <%= image_tag supply.image.url(:mini) %>
+            <hr>
+            <h4 class="card-title"><b><%= supply.name %></b></h4>
             <hr>
             <p class="card-text">
-              <p><b>Stock:</b> <%= supply.stock %></p>
-              <p><%= supply.description %></p>
-              <p><%= link_to '', edit_supply_path(supply), class: 'fas fa-edit' %> | <%= link_to '', supply, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></p>
+              <p><b>Stock</b><br><%= supply.stock %></p>
+              <p><b>Descripción</b><br><%= supply.description %></p>
           </div>
+          <p><%= link_to '', edit_supply_path(supply), class: 'fas fa-edit' %> | <%= link_to '', supply, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></p>
         </div>
       </div>
     <%end%>
