--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -31,11 +31,11 @@
               </p>
               <p>
                 <% if @order.state == 'En espera' %>
-                  <p class='alert alert-danger'><%= @order.state %></p>
+                  <p class='alert bg-danger text-white'><%= @order.state %></p>
                 <% elsif @order.state == 'En proceso' %>
-                  <p class='alert alert-warning'><%= @order.state %>
+                  <p class='alert bg-warning text-white'><%= @order.state %>
                 <% else @order.state == 'Completado' %>
-                  <p class='alert alert-success'><%= @order.state %></p>
+                  <p class='alert bg-success text-white'><%= @order.state %></p>
                 <%end%>
               </p>
               <p>
@@ -75,7 +75,7 @@
             <p>No ha agregado ningún detalle</p>
           <% else %>
             <div class="table-responsive">
-              <table class="table table-striped table-bordered table-hover">
+              <table class="table table-striped table-bordered table-hover table-secondary">
                 <thead>
                   <tr>
                     <th>Nombre</th>
