--- a/starweb/app/assets/stylesheets/style.scss
+++ b/starweb/app/assets/stylesheets/style.scss
@@ -43,6 +43,7 @@ p {
   display: inline-block;
   margin-bottom: 15px;
   border: 1px solid #5f7c9a;
+  background-color: #f5f5f5;
 }
 
 .card-body {
@@ -50,11 +51,10 @@ p {
 
     .fas {
       font-size: 30px;
-      color: $color-quaternary;
       text-decoration: none;
 
       &:hover {
-        opacity: 0.8;
+        opacity: 0.7;
       }
 
     }
